<resources>
    <string name="app_name" translatable="false">Outer Space Manager</string>
    <string name="general_view">Vue générale</string>
    <string name="buildings">Bâtiments</string>
    <string name="fleet">Flotte</string>
    <string name="research">Recherches</string>
    <string name="space_shipyard">Chantier Spatial</string>
    <string name="galaxy">Galaxie</string>
    <string name="create_account">Créer un compte</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="connection">Connexion</string>
    <string name="sign_in">Se Connecter</string>
    <string name="minerals">Minéraux</string>
    <string name="gas">Gaz</string>
    <string name="username">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="new_account">Nouveau compte</string>
    <string name="already_account">Déjà un compte ?</string>
    <string name="connecting">Connexion en cours…</string>
    <string name="upgrade">Améliorer</string>
    <string name="upgrading">Amélioration en cours</string>
    <string name="infos">Infos</string>
    <string name="buildings_title">Bâtiments</string>
    <string name="galaxy_title">Galaxie</string>
    <string name="improvement">Amélioration</string>
    <string name="cost">Coût</string>
    <string name="not_enought_ressources">Ressources insuffisantes</string>
    <string name="construction">Construction</string>
    <string name="imrovement_started">Amélioration démarrée</string>
    <string name="unknown_building">Batîment introuvable</string>
    <string name="server_error">Erreur server</string>
    <string name="invalid_token">Token invalide</string>

    <string name="outer_space_manager_logo_description" translatable="false">Outer Space Manager Logo</string>
    <string name="profil_picture_description" translatable="false">Profil picture</string>
    <string name="building_image_description" translatable="false">Building image</string>
    <string name="oil_icon_description" translatable="false">Oil icon</string>
    <string name="mineral_icon_description" translatable="false">Mineral icon</string>
    <string name="building_speed_icon_description" translatable="false">Building speed icon</string>
    <string name="time_icon_description" translatable="false">Building time icon</string>
    <string name="left_arrow_description" translatable="false">Left arrow icon</string>
    <string name="oil_modifier_icon_description" translatable="false">Oil modifier icon</string>
    <string name="mineral_modifier_icon_description" translatable="false">Mineral modifier icon</string>
    <string name="building_already_in_queue">Batîment en cours d\'amélioration</string>
    <string name="network_error">Erreur réseau</string>
    <string name="building_in_progress">Construction en cours</string>
    <string name="searches_title">Recherches</string>
    <string name="search_image_description">Search image</string>
    <string name="unknown_search">Recherche inconnue</string>
    <string name="error_on_delete_in_database">Erreur de la suppression dans la base de données</string>
    <string name="fleet_title">Flotte</string>
    <string name="life_icon_description">Life icon</string>
    <string name="shield_icon_description">Shield icon</string>
    <string name="attack_icon_description">Attack icon</string>
    <string name="defense">Défense</string>
    <string name="attack">Attaque</string>
    <string name="ship_image_description">Ship image</string>
</resources>
